--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ streamlit = "^0.80.0"
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
 black = {version = "^20.8b1", allow-prereleases = true}
+pytest = "^6.2.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
